added google fonts

--- a/Project 2/css/style.css
+++ b/Project 2/css/style.css
@@ -1,8 +1,11 @@
 html {
   height: 100%;
 }
+
 body {
   background-image: linear-gradient(#FC5E55, #FA4083);
+  font-family: 'Roboto', sans-serif;
+  color: white;
 }
 
 .container {
@@ -67,4 +70,9 @@ main {
 
 .herobox2 {
   flex: 1;
+}
+
+h1 {
+  font-size: 80px;
+  font-family: 'Playfair Display', serif;
 }
