--- a/Project 2/css/style.css
+++ b/Project 2/css/style.css
@@ -6,6 +6,8 @@ body {
   background-image: linear-gradient(#FC5E55, #FA4083);
   font-family: 'Roboto', sans-serif;
   color: white;
+  font-size: 1.125rem;
+  font-weight: 200;
 }
 
 .container {
@@ -39,33 +41,39 @@ main {
 }
 
 .cards {
-  background-color: rgb(16, 199, 16);
-  min-height: 300px;
   display: flex;
   justify-content: space-between;
+  text-align: center;
 }
 
 .card1 {
-  background-color: pink;
-  min-height: 300px;
+  background-image:url(../images/image-background-card1.jpg);
+  background-size: cover;
+  min-height: 250px;
+  background-position: bottom;
   width: 30%;
 }
 
 .card2 {
-  background-color: rgb(248, 121, 142);
-  min-height: 300px;
   width: 30%;
+  min-height: 250px;
+  background-image: url(../images/image-background-card2.jpg);
+  background-size: cover;
+  background-position: bottom;
 }
 
 .card3 {
-  background-color: rgba(241, 38, 72, 0.733);
-  min-height: 300px;
   width: 30%;
+  min-height: 250px;
+  background-image: url(../images/image-background-card3.jpg);
+  background-size: cover;
+  background-position: bottom;
 }
 
 
 .herobox1 {
   flex: 2;
+  padding-right: 100px;
 }
 
 .herobox2 {
@@ -73,6 +81,28 @@ main {
 }
 
 h1 {
-  font-size: 80px;
+  font-size: 3.25rem;
   font-family: 'Playfair Display', serif;
+  margin-bottom: 1rem;
+}
+
+h2 {
+  font-size: 2rem;
+  font-family: 'Playfair Display', serif;
+  margin-top: 20px;
+}
+
+p {
+  line-height: 1.75rem;
+  margin-bottom: 0.5rem;
+}
+
+.cards p {
+  font-size: 0.85rem;
+  line-height: 1.2rem;
+  margin: 10px 30px 20px 30px;
+}
+
+i {
+  font-size: 100px;
 }
